add notes for using stream

--- a/docs/direct/api/v1.md
+++ b/docs/direct/api/v1.md
@@ -4552,6 +4552,15 @@ GET https://pbx.sipcentric.com/api/v1/stream
 
 You can create a standing HTTP connection to our API for live streaming events. This means you can process events in near real time, without having to poll other resources and potentially avoid hitting request limits. Data is returned as JSON objects.
 
+In order to run stream the authenticating user should be an admin in that particular account. 
+
+example below should work 
+```bash 
+
+curl -X GET -u "user:pass" --no-buffer "https://pbx.sipcentric.com/api/v1/stream"
+
+```
+
 Currently the following is available via the streaming API:
 
 - Incoming call notifications
@@ -4571,6 +4580,8 @@ Example object:
   }
 }
 ```
+
+
 
 #### Connecting
 
