--- a/docs/wholesale/api/v3.md
+++ b/docs/wholesale/api/v3.md
@@ -2676,85 +2676,17 @@ SMS sent to this number.<br/>
 
 |Method|Description|||
 |:-|-|-|-|
-|**GET**|Return current 999 information for {NUMBER}|
+|**GET**|Return current 999 information for {NUMBER}|||
 |**PUT**|Replace current 999 details on {NUMBER} <br/>Please note maximum field lengths indicated below|||
-||*title*|20|**Individual End User Only**<br/> Title (e.g. Mr, Ms, Mrs)<br/>Titles that disclose gender are preferred by the Emergency Services.|
+||*title*|20|**Individual End User Only**<br/>Title (e.g. Mr, Ms, Mrs)<br/>Titles that disclose gender are preferred by the Emergency Services.|
+||*forename*|20|**Individual End User Only**<br/>Forename or Initials|
+||*name*|50|**Mandatory for Individual and Business End Users**<br/>Individual End User - Surname<br/>Business End User - Business Name [See Note 1]|
+||*bussuffix*|50|**Business End User Only**<br/>Suffix (Ltd, Plc) [See Note 2]|
+||*premises*|60|**Mandatory for Individual and Business End Users**<br/>Identifies premises on a thoroughfare i.e. House Number or Name (e.g. 104, The Lighthouse, Thatched Cottage)|
+||*thoroughfare*|55|**Mandatory for Individual and Business End Users**<br/>Street Name (e.g. King Street, Station Road, Beech Avenue)|
+||*locality*|30|**Mandatory for Individual and Business End Users**<br/>Village or an area within an Town and Town if possible|
+||*postcode*|12|**Mandatory for Individual and Business End Users**<br/>The full current postcode as recognised by Royal Mail’s PAF database. This must be in the form Out-code space In-code e.g. LS11 5DF, S9 5AD, S60 3ML|
 
-
-<table>
-<tr>
-<td>GET</td>
-<td>
-
-Return current 999 information for {NUMBER}
-
-</td>
-</tr>
-
-<tr>
-<td>PUT</td>
-<td>
-
-Replace current 999 details on {NUMBER}
-Please note maximum field lengths indicated below
-
-<tr>
-<td>title</td>
-<td>20</td>
-<td><b>Individual End User Only</b><br/> Title (e.g. Mr, Ms, Mrs)<br/>
-Titles that disclose gender are <br/>preferred by the Emergency Services.</td>
-</tr>
-<tr>
-<td>forename</td>
-<td>20</td>
-<td><b>Individual End User Only</b><br/> Forename or Initials</td>
-</tr>
-
-<tr>
-<td>name</td>
-<td>50</td>
-<td><b>Individual End User Only</b><br/> Surname</td>
-<td><b>Business End User</b><br/>Business Name [See Note 1]</td>
-</tr>
-
-<tr>
-<td>bussuffix</td>
-<td>50</td>
-<td></td>
-<td><b>Business End User Only</b><br/> Suffix (Ltd, Plc) [See Note 2]</td>
-</tr>
-
-<tr>
-<td>premises</td>
-<td>60</td>
-<td><b>Mandatory for Individual and Business End Users</b><br/> Identifies premises on a thoroughfare i.e. House Number<br/>
-or Name (e.g. 104, The Lighthouse, Thatched Cottage)</td>
-</tr>
-
-<tr>
-<td>thoroughfare</td>
-<td>55</td>
-<td><b>Mandatory for Individual and Business End Users</b><br/> Street Name<br/>
-(e.g. King Street, Station Road, Beech Avenue)</td>
-</tr>
-
-
-<tr>
-<td>locality</td>
-<td>30</td>
-<td><b>Mandatory for Individual and Business End Users</b><br/> Village or an area within an Town and Town if possible</td>
-</tr>
-
-
-<tr>
-<td>postcode</td>
-<td>12</td>
-<td><b>Mandatory for Individual and Business End Users</b><br/> The full current postcode as recognised by Royal Mail's<br /> PAF database. This must be in the form Out-code space In <br />code e.g. LS11 5DF, S9 5AD, S60 3ML</td>
-</tr>
-
-</td>
-</tr>
-</table>
 
 **Remember this information is to assist the Emergency Service response and you have a legal obligation to ensure this information is provided fully and accurately to the best of your ability.**
 
