Added BYOC, Teams Operator Connect, and related additions/changes

--- a/docs/wholesale/api/v3.md
+++ b/docs/wholesale/api/v3.md
@@ -2303,6 +2303,7 @@ Each routing block is defined by a minimum of a ‘type' and some optional param
 |**type**|sip|SIP endpoint|
 ||reg |Registered SIP user|
 ||pstn |PSTN Destination (i.e. voice call forwarding)|
+||teams |Send to Microsoft Teams (see [Teams Operator Connect](#teams-operator-connect))|
 ||fax |Receive as Fax to eMail or HTTP <br/>**NB fax cannot be used in conjunction with any other endpoint**|
 ||busy |Busy tone|
 |delay|[1...n]|Delay before executing this leg|
@@ -2330,6 +2331,7 @@ Depending on the type of endpoint selected above there are some additional endpo
 ||*maxcpc*|To be used in conjunction with the above, sets a maximum call cost (e.g. connection cost) <br/>**NB does not limit call duration to a cost ‘limit'**|
 ||*cli*|CLI to present when forwarding the call, if not specified will present the callers CLI where it is available.|
 ||trunk|The trunk to be associated (for billing and CDR purposes) with the outbound (B-leg) (e.g. 9xxxxx-TRUNKNAME)|
+|**teams**|no parameters available|The tenant ID is not required since calls will be routed automatically based on the target number|
 |**fax**|*method*|One of **http** or **mail**|
 ||*endpoint*|Destination eMail address or HTTP POST URI e.g. user@host.com http://www.yourdomain.com/cgi/inboundfax.php|
 |**busy**|no parameters available|
@@ -3560,6 +3562,612 @@ To ensure faxes arrive as intended, all faxes should be sent in PDF format with 
 **$ Message Charge**
 There is a charge for sending fax messages.
 Please see https://simwood.com/rates for full information
+
+
+## Bring Your Own Carrier (BYOC)
+
+### BYOC Management
+
+#### List Resource
+
+```
+/v3/accounts/{ACCOUNT}/byoc
+```
+
+<table>
+<tr>
+
+<td>GET</td>
+
+<tr>
+<td colspan="2">
+Lists all BYOC connections
+</td>
+</tr>
+
+<tr>
+<td colspan="2">
+Example response:
+
+```json
+{
+  "success": true,
+  "data": [
+    {
+      "uuid": "3497d07a-9dca-413e-8562-a4fc99f4a4ab",
+      "label": "Test BYOC",
+      "trunk": "939998-ACMETRUNK",
+      "sipEndpoint": "3497d07a-9dca-413e-8562-a4fc99f4a4ab.byoc.simwood.com"
+    },
+    {
+      ...
+    }
+  ]
+}
+```
+</td>
+</tr>
+
+</tr>
+
+<tr>
+
+<td>POST</td>
+
+<tr>
+<td colspan="2">Create a new BYOC connection.
+The following fields must be submitted as a JSON object.</td>
+</tr>
+
+<tr>
+<td>label</td>
+<td>Label or name for the BYOC connection.</td>
+</tr>
+
+<tr>
+<td>trunk</td>
+<td>[Optional] The trunk to use for routing inbound calls over the BYOC connection. If not specified, the account default routing will be used. Please also refer to BYOC Advanced Routing for how this can be overridden for specific number patterns.</td>
+</tr>
+
+</tr>
+</table>
+
+
+#### Instance Resource
+
+```
+/v3/accounts/{ACCOUNT}/byoc/{BYOC}
+```
+
+<table>
+<tr>
+
+<td>GET</td>
+
+<tr>
+<td>
+Fetch the specified BYOC connection
+</td>
+</tr>
+
+<tr>
+<td>
+Example response:
+
+```json
+{
+  "success": true,
+  "data": {
+    "uuid": "3497d07a-9dca-413e-8562-a4fc99f4a4ab",
+    "sipEndpoint": "3497d07a-9dca-413e-8562-a4fc99f4a4ab.byoc.simwood.com",
+    "label": "Test BYOC",
+    "trunk": "939998-ACMETRUNK",
+    "transforms": [
+      {
+        "action": "strip",
+        "value": "881234"
+      },
+      {
+        ...
+      }
+    ]
+  }
+}
+```
+</td>
+</tr>
+
+</tr>
+
+<tr>
+
+<td>PUT</td>
+
+<tr>
+<td colspan="2">Update the specified BYOC connection. The following fields must be submitted as a JSON object.</td>
+</tr>
+
+<tr>
+<td>label</td>
+<td>Label or name for the BYOC connection.</td>
+</tr>
+
+<tr>
+<td>trunk</td>
+<td>[Optional] The trunk to use for routing inbound calls over the BYOC connection. If not specified, the account default routing will be used. Please also refer to BYOC Advanced Routing for how this can be overridden for specific number patterns.</td>
+</tr>
+
+<tr>
+<td>transforms</td>
+<td>[Optional] An array of transformations to be applied to the destination number on inbound calls. Any transformation is applied prior to delivery to the relevant trunk, and also prior to matching any Advanced Routing rules. Currently available transform actions are <code>strip</code>, <code>prefix</code> and <code>append</code>.</td>
+</tr>
+
+</tr>
+
+<tr>
+<td>DELETE</td>
+<td colspan="2">Delete the specified BYOC connection.</td>
+</tr>
+
+</table>
+
+### Inbound ACL
+
+#### List Resource
+
+```
+/v3/accounts/{ACCOUNT}/byoc/{BYOC}/acl
+```
+
+<table>
+<tr>
+
+<td>GET</td>
+
+<tr>
+<td colspan="2">
+Lists all ACL (whitelist) entries for the specified BYOC connection. Only calls originating from these IP addresses or subnets will be allowed.
+</td>
+</tr>
+
+<tr>
+<td colspan="2">
+Example response:
+
+```json
+{
+  "success": true,
+  "data": [
+    {
+      "uuid": "4a2908fb-3e03-11ef-b201-0242ac110004",
+      "cidr": "178.22.139.77/32",
+    },
+    {
+      "uuid": "4a290a13-3e03-11ef-b201-0242ac110004",
+      "cidr": "185.63.140.77/32",
+    },
+    {
+      ...
+    }
+  ]
+}
+```
+</td>
+</tr>
+
+</tr>
+
+<tr>
+
+<td>POST</td>
+
+<tr>
+<td colspan="2">Create a new ACL (whitelist) entry for the specified BYOC connection.
+The following fields must be submitted as a JSON object.</td>
+</tr>
+
+<tr>
+<td>cidr</td>
+<td>The IP address or subnet to whitelist.</td>
+</tr>
+
+</tr>
+</table>
+
+
+#### Instance Resource
+
+```
+/v3/accounts/{ACCOUNT}/byoc/{BYOC}/acl/{UUID}
+```
+
+<table>
+
+<tr>
+<td>DELETE</td>
+<td colspan="2">Delete the specified ACL (whitelist) entry.</td>
+</tr>
+
+</table>
+
+### Inbound Advanced Routing
+
+#### List Resource
+
+```
+/v3/accounts/{ACCOUNT}/byoc/{BYOC}/routing/inbound
+```
+
+<table>
+<tr>
+
+<td>GET</td>
+
+<tr>
+<td colspan="2">
+Lists all inbound routes for the specified BYOC connection. Routes are processed according to longest prefix match, and <em>after</em> any transformations have been applied. If a match is not found, the call will be routed over the trunk specified in the BYOC connection config. If no trunk is specified, the account default routing will be used.
+</td>
+</tr>
+
+<tr>
+<td colspan="2">
+Example response:
+
+```json
+{
+    "success": true,
+    "data": [
+        {
+            "uuid": "35e6ceb1-d1f8-4340-9644-54b43fce57f8",
+            "byoc_uuid": "3497d07a-9dca-413e-8562-a4fc99f4a4ab",
+            "prefix": "44330122",
+            "trunk": "939998-LIVE",
+            "label": "SC"        },
+        {
+            "uuid": "e5ec0f8a-7aa1-44f5-bd02-0398e3f355bf",
+            "byoc_uuid": "3497d07a-9dca-413e-8562-a4fc99f4a4ab",
+            "prefix": "443301229999",
+            "trunk": "939998-SANDBOX",
+            "label": "Test"
+        }
+    ]
+}
+```
+</td>
+</tr>
+
+</tr>
+
+<tr>
+
+<td>POST</td>
+
+<tr>
+<td colspan="2">Create one or more new inbound routes for the specified BYOC connection.
+The following fields must be submitted as a JSON object.</td>
+</tr>
+
+<tr>
+<td>data</td>
+<td>
+An array of objects, each containing the following fields:
+<table>
+<tr>
+<td>prefix</td>
+<td>The prefix to match.</td>
+</tr>
+<tr>
+<td>trunk</td>
+<td>The trunk over which to route matching calls.</td>
+</tr>
+<tr>
+<td>label</td>
+<td>[Optional] The label for the route.</td>
+</tr>
+</table>
+</td>
+</tr>
+
+</tr>
+</table>
+
+#### Instance Resource
+
+```
+/v3/accounts/{ACCOUNT}/byoc/{BYOC}/routes/{UUID}
+```
+
+<table>
+
+<tr>
+<td>DELETE</td>
+<td colspan="2">Delete the specified inbound route.</td>
+</tr>
+
+</table>
+
+
+
+## Teams Operator Connect
+
+### Customer/Tenant Management
+
+#### List Resource
+
+```
+/v3/accounts/{ACCOUNT}/oc
+```
+
+<table>
+<tr>
+
+<td>GET</td>
+
+<tr>
+<td colspan="2">
+Lists all connected Teams tenants.
+</td>
+</tr>
+
+<tr>
+<td colspan="2">
+Example response:
+
+```json
+{
+  "success": true,
+  "data": [
+    {
+      "uuid": "b9b07f32-1cfd-11ef-b201-0242ac110004",
+      "domain": "simwoodesms.onmicrosoft.com"
+    },
+    {
+      ...
+    }
+  ]
+}
+```
+</td>
+</tr>
+
+</tr>
+
+<tr>
+
+<td>POST</td>
+
+<tr>
+<td colspan="2">Connect a new Teams tenant.
+The following fields must be submitted as a JSON object. Please note all fields are required.</td>
+</tr>
+
+<tr>
+<td>businessName</td>
+<td>The business name of the tenant.</td>
+</tr>
+
+<tr>
+<td>customerDomains</td>
+<td>Currently allows a single domain to be specified. This should therefore be the primary domain of the tenant.</td>
+</tr>
+
+<tr>
+<td>address</td>
+<td>The address of the tenant, submitted as a JSON object with the following fields:
+<table>
+<tr>
+<td>addLine1</td>
+<td>The first line of the address.</td>
+</tr>
+<tr>
+<td>addLine2</td>
+<td>The second line of the address.</td>
+</tr>
+<tr>
+<td>city</td>
+<td>The city of the address.</td>
+</tr>
+<tr>
+<td>state</td>
+<td>The state of the address.</td>
+</tr>
+<tr>
+<td>country</td>
+<td>The country of the address.</td>
+</tr>
+<tr>
+<td>postalCode</td>
+<td>The postal code of the address.</td>
+</tr>
+</table>
+
+</td>
+</tr>
+
+<tr>
+<td>contact</td>
+<td>The contact of the tenant, submitted as a JSON object with the following fields:
+<table>
+<tr>
+<td>firstName</td>
+<td>The first name of the contact.</td>
+</tr>
+<tr>
+<td>lastName</td>
+<td>The last name of the contact.</td>
+</tr>
+<tr>
+<td>email</td>
+<td>The email of the contact.</td>
+</tr>
+</table>
+
+</td>
+</tr>
+
+<tr>
+<td colspan="2">
+Example request:
+
+```json
+{
+  "businessName": "Simwood eSMS Limited",
+  "customerDomains": "simwoodesms.onmicrosoft.com",
+  "address": {
+    "addLine1": "Simwood House",
+    "addLine2": "Old Gloucester Road",
+    "city": "Bristol",
+    "state": "Gloucestershire",
+    "country": "United Kingdom",
+    "postalCode": "BS16 1FX"
+  },
+  "contact": {
+    "firstName": "Charles",
+    "lastName": "Chance",
+    "email": "team@simwood.com"
+  }
+}
+```
+</td>
+</tr>
+
+
+</tr>
+</table>
+
+
+### Tenant Configuration
+
+```
+/v3/accounts/{ACCOUNT}/oc/{UUID}/config
+```
+
+<table>
+<tr>
+
+<td>GET</td>
+
+<tr>
+<td colspan="2">
+Fetch the configuration for the specified tenant
+</td>
+</tr>
+
+<tr>
+<td>
+Example response:
+
+```json
+{
+  "outbound_destination": "%e164@sip.sipcentric.com"
+}
+```
+</td>
+</tr>
+
+</tr>
+
+<tr>
+
+<td>PUT</td>
+
+<tr>
+<td colspan="2">Update the configuration for the specified tenant. The following fields must be submitted as a JSON object.</td>
+</tr>
+
+<tr>
+<td>outbound_destination</td>
+<td>[Optional] If specified, outbound calls made by users of the Teams tenant will be sent to the specified destination (SIP endpoint) instead of being terminated by Simwood over the usual routes. If you are operating your own UC platform, this will ensure you are included in the call path and ultimately the routing decision. Useful where you might want to connect calls from Teams to local users on the PBX, or to bill/record etc. in the same way as other calls made on the platform.<br/><br/>
+Where a call is sent to the specified endpoint, the following headers will be included:<br/><br/>
+
+<table>
+<tr>
+<td>X-simwood-oc-uuid</td>
+<td>The UUID of the tenant from which the call has originated.</td>
+</tr>
+<tr>
+<td>X-simwood-oc-number</td>
+<td>The number assigned to the Teams user making the call. Useful for identifying the user if the caller ID is set to a company-wide number or withheld.</td>
+</tr>
+</table>
+
+</td>
+</tr>
+
+</tr>
+
+</table>
+
+### Tenant Assigned Numbers
+
+```
+/v3/accounts/{ACCOUNT}/oc/{UUID}/numbers
+```
+
+<table>
+<tr>
+
+<td>GET</td>
+
+<tr>
+<td colspan="2">
+Lists all numbers assigned to the specified tenant.
+</td>
+</tr>
+
+<tr>
+<td colspan="2">
+Example response:
+
+```json
+{
+  "success": true,
+  "data": [
+    "443301229999",
+    "441215739999",
+    ...
+  ]
+}
+```
+</td>
+</tr>
+
+</tr>
+
+<tr>
+<td>POST</td>
+
+<tr>
+<td colspan="2">
+Manage the list of assigned numbers (add/remove one or more numbers at a time). The following fields must be submitted as a JSON object.
+</td>
+</tr>
+
+<tr>
+<td>action</td>
+<td>Either <code>add</code> or <code>delete</code>.</td>
+</tr>
+
+<tr>
+<td>numbers</td>
+<td>An array of numbers to add or remove.</td>
+</tr>
+
+<tr>
+<td colspan="2">
+Example request:
+
+```json
+{
+  "action": "add",
+  "numbers": ["443301229999", "441215739999"]
+}
+```
+</td>
+</tr>
+
+</tr>
+</table>
 
 
 ## HTTP POST (Inbound Events)
